<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DriverSpa</string>
    <string name="facebook_app_id">609265849262620</string>
    <string name="welcome_text">Добро пожаловать!</string>
    <string name="user_start">Я автомобилист, хочу помыть машину</string>
    <string name="washer_start">Я администратор автомойки</string>
    <string name="hint_login">Логин</string>
    <string name="enter_number_text">Пожалуйста, введите\n 
	Ваш номер телефона:</string>
	<string name="enter_code_text">Пожалуйста, введите код,\n отправленный по смс:</string>
    <string name="kazakhstan_number_text">Казахстан (+7)</string>
    <string name="button_ok">ОК</string>
    <string name="button_next">Продолжить</string>
    <string name="whatsapp_register_info">Нажмите кнопку ниже, чтобы открыть WhatsApp и отправить сообщение с кодом. Сообщение нужно отправить с того же номера, который вы регистрируете.</string>
    <string name="whatsapp_send_button">Отправить через WhatsApp</string>
    <string name="whatsapp_message_template">Чтобы быстро войти в приложение DriverSpa, отправьте это сообщение без изменений. После отправки сообщения вернитесь в приложение.\n\n%1$s</string>
    <string name="whatsapp_waiting">Ожидаем подтверждение…</string>
    <string name="whatsapp_retry">Повторить</string>
    <string name="verification_code">Код подтверждения</string>
    <string name="button_retry">Отправить код еще раз</string>
    <string name="login_phone">Номер телефона</string>
    <string name="login_company_name">Название компании</string>
    <string name="settings_language">Язык</string>
    <string name="no_records">Ничего не найдено</string>
    <string name="retry">ПОВТОРИТЬ</string>
    <string name="connection_error">Ошибка соединения</string>
    <string name="textview_loading_data">загрузка…</string>
    <string name="list_empty">Ничего не найдено</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="gcm_defaultSenderId">817450629503</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the app again.</string>
    <string name="zero_min">0 мин</string>
    <string name="client_name">Имя клиента</string>
    <string name="sedan">Седан</string>
    <string name="comment">Комментарий</string>
    <string name="additional">Дополнительно</string>
    <string name="no_available_services">Нет доступных услуг</string>
    <string name="motorcycle">Мотоцикл</string>
    <string name="minibus">Микроавтобус</string>
    <string name="car_brand">Марка автомобиля</string>
    <string name="crossover">Кроссовер</string>
    <string name="jeep">Джип</string>
    <string name="prices">Цены</string>
    <string name="time_word">Время</string>
    <string name="services">Услуги</string>
    <string name="wagon">Универсал</string>
    <string name="card_payment">Оплата по карте</string>
    <string name="payment">Оплата</string>
    <string name="minivan">Минивэн</string>
    <string name="mini_jeep">Мини джип</string>
    <string name="mini">Мини</string>
    <string name="booking_at_0800">Бронь на 08:00</string>
    <string name="discounts_and_other">Скидки и прочее</string>
    <string name="discount_colon">Скидка:</string>
    <string name="promo_short_desc">Краткое описание акции (100 символов)</string>
    <string name="add_promo_title">Добавление акции</string>
    <string name="add">Добавить</string>
    <string name="car_plate_required">Гос. номер авто*</string>
    <string name="box_1">Бокс 1</string>
    <string name="save">Сохранить</string>
    <string name="discount">Скидка</string>
    <string name="price">Цена</string>
    <string name="no_boxes_for_queue">Нет боксов для создания очереди</string>
    <string name="client_paid_for_wash">Клиент оплатил за мойку</string>
    <string name="edit">Изменить</string>
    <string name="promo_end_date_incl">Дата окончания акции(включительно)</string>
    <string name="city">Город</string>
    <string name="boxes">Боксы</string>
    <string name="of_zero_tenge">из 0 ₸</string>
    <string name="cancel">Отменить</string>
    <string name="min_dot">мин.</string>
    <string name="body_interior_from_1500">кузов + салон от 1500</string>
    <string name="finished">Закончен</string>
    <string name="booking_cannot_continue">Бронь не может быть продолжен. Нет данных на сегодня, или произошла ошибка при получении график работы мойки</string>
    <string name="demo_washer_name_long">Автомойка Тап Таза fgsdgf sdfgsdf gsd fgsdfg sdfg df gdf gsdf g fdgsdf gsdf gsdf gsd gfs dg sdfg sdfg sdfg sdfg sdf s</string>
    <string name="bonuses">Бонусы</string>
    <string name="car_type">Тип авто</string>
    <string name="filters">Фильтры</string>
    <string name="street_house">Улица, Дом</string>
    <string name="phone_colon">Телефон:</string>
    <string name="today_caps">СЕГОДНЯ</string>
    <string name="build_route">ПРОЛОЖИТЬ МАРШРУТ</string>
    <string name="apply">Применить</string>
    <string name="offline">оффлайн</string>
    <string name="car_number_example">Номер машины: x001xxx</string>
    <string name="my_booking">Моя бронь</string>
    <string name="body_interior">Кузов + салон</string>
    <string name="complex_word">Комплексные</string>
    <string name="comments">Комментарии</string>
    <string name="cafe">Кафе</string>
    <string name="live_queue">Живая очередь</string>
    <string name="contact_us_info">Если у вас возникли вопросы или проблемы при работе с приложением — напишите нам:</string>
    <string name="additional_info">Доп. информация</string>
    <string name="add_box">Добавить бокс</string>
    <string name="hybrid">Гибрид</string>
    <string name="payment_type">Вид оплаты</string>
    <string name="web">Веб</string>
    <string name="astana">Астана</string>
    <string name="car_wash_label_sp">"Автомойка "</string>
    <string name="hours">часов</string>
    <string name="demo_washer_taptaza">Тап таза автомойка</string>
    <string name="thanks_for_choosing">Спасибо, что выбрали нас!</string>
    <string name="seconds">секунды</string>
    <string name="today">Сегодня</string>
    <string name="raise_price">Поднять цену</string>
    <string name="remaining_colon">Осталось:</string>
    <string name="unknown">неизвестно</string>
    <string name="box_name_hint">Название бокса (Прим. Бокс 1)*</string>
    <string name="minutes">минут</string>
    <string name="month_short">мес.</string>
    <string name="car_brand_required">Марка авто*</string>
    <string name="coffee">Кофе</string>
    <string name="review_example">Качество радует! Одна из моих любимых автомоек!</string>
    <string name="name_label_colon">Имя:</string>
    <string name="washer_name">Имя мойщика</string>
    <string name="rest_area">Зона отдыха</string>
    <string name="close">Закрыть</string>
    <string name="orders_caps">ЗАКАЗЫ</string>
    <string name="tomorrow">Завтра</string>
    <string name="book_caps">ЗАБРОНИРОВАТЬ</string>
    <string name="days">дней</string>
    <string name="logout">Выйти</string>
    <string name="select_time">Выбрать время</string>
    <string name="all_caps">ВСЕ</string>
    <string name="time_colon">Время:</string>
    <string name="in_progress_caps">В ОБРАБОТКЕ</string>
    <string name="prep_at">в</string>
    <string name="atm">Банкомат</string>
    <string name="distance_4km">4 км</string>
    <string name="datetime_example">10.15.2016 в 20:30</string>
    <string name="phone">Телефон</string>
    <string name="interface_language">Язык интерфейса</string>
    <string name="agree_notifications">Я согласен получать\nинформационные уведомления</string>
    <string name="emergency_finish">Экстренное завершение услуг</string>
    <string name="thursday">Четверг</string>
    <string name="eta_question">Через какое время можете быть на автомойке?</string>
    <string name="sedan_prices">Цены на седан</string>
    <string name="service_colon">Услуга:</string>
    <string name="service_provided">Услуга оказана</string>
    <string name="notifications">Уведомления</string>
    <string name="car_type_colon">Тип авто:</string>
    <string name="bookings_table">Таблица броней</string>
    <string name="table_caps">ТАБЛИЦА</string>
    <string name="saturday">Суббота</string>
    <string name="cost_colon_typo">Стоймость:</string>
    <string name="status_colon">Статус:</string>
    <string name="statistics_caps">СТАТИСТИКА</string>
    <string name="wednesday">Среда</string>
    <string name="with_discount">со скидкой</string>
    <string name="free_available">Свободно</string>
    <string name="russian_lang">Русский</string>
    <string name="rating">Рейтинг</string>
    <string name="registration">Регистрация</string>
    <string name="schedule">Расписание</string>
    <string name="times_count">"раз(а) "</string>
    <string name="friday">Пятница</string>
    <string name="profile_title">Профиль</string>
    <string name="continue_with_amount">Продолжить с #AMOUNT#</string>
    <string name="accept">Принять</string>
    <string name="apply_caps">ПРИМЕНИТЬ</string>
    <string name="offers_from_washes">Предложения от автомоек</string>
    <string name="offering_price_wait">Предлагаем вашу цену автомойкам, пожалуйста подождите</string>
    <string name="last_wash">Последняя мойка</string>
    <string name="monday">Понедельник</string>
    <string name="search_on_map">Поиск по карте</string>
    <string name="rate_app">Оценить приложение</string>
    <string name="send_to_box_nl">Отправить\n в бокс</string>
    <string name="show_washes_radius_typo">Отоброжать мойки в рудиусе:</string>
    <string name="mark_on_map">Отметить на карте</string>
    <string name="reviews_caps">ОТЗЫВЫ</string>
    <string name="reviews">Отзывы</string>
    <string name="from_500">от 500 ₸</string>
    <string name="from_1500">от 1500 ₸</string>
    <string name="balance_colon">Остаток:</string>
    <string name="detect_city_gps">Определить город по GPS</string>
    <string name="waiting">Ожидание</string>
    <string name="no_offline_boxes">Нет оффлайн боксов для создания очереди, нажмите чтобы добавить...</string>
    <string name="no_reviews">Нет отзывов</string>
    <string name="no_orders">Нет заказов</string>
    <string name="login_required">Необходимо войти</string>
    <string name="in_cash">Наличными</string>
    <string name="hint_washer_name">Название мойки</string>
    <string name="sms_booking_details">На указанный Вами мобильный телефон придет СМС-сообщение с деталями брони.</string>
    <string name="on_date">На дату</string>
    <string name="wash_on_name">Мойка на имя</string>
    <string name="my_location">Мое местоположение</string>
    <string name="car_brand_colon">Марка авто:</string>
    <string name="max_price">Максимальная цена</string>
    <string name="passenger_car_typo">Лекговой автомобиль</string>
    <string name="passenger_car">Легковой автомобиль</string>
    <string name="body">Кузов</string>
    <string name="around_clock">Круглосуточно</string>
    <string name="client_no_show">Клиент не явился</string>
    <string name="choose_city_caps">ВЫБЕРИТЕ ГОРОД</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="password">Пароль</string>
    <string name="create_password">Придумайте пароль\nдля входа в приложение</string>
    <string name="password_rule">Минимум 8 символов, хотя бы одна буква и одна цифра</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="login_word">Войти</string>
    <string name="enter_password">Введите пароль</string>
</resources>