<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_car"
    android:focusable="false"
    android:focusableInTouchMode="false">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"        
        android:background="@color/BlackTransparent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/vertical_margin"            
            android:text="@string/welcome_text"
            android:textColor="@color/White"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btnUserStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/horizontal_margin_double"
            android:layout_marginRight="@dimen/horizontal_margin_double"
            android:layout_marginTop="@dimen/vertical_margin_double"            
            android:background="@drawable/background_button_border"
            android:padding="10dp"
            android:text="@string/user_start"
            android:textColor="@drawable/button_state_color"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnWasherStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/horizontal_margin_double"
            android:layout_marginRight="@dimen/horizontal_margin_double"
            android:layout_marginTop="@dimen/vertical_margin"            
            android:background="@drawable/background_button_borderless"
            android:padding="10dp"
            android:text="@string/washer_start"
            android:textColor="@drawable/button_state_color"
            android:textSize="22sp" />
    </LinearLayout>

        <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/mainLayout">        

        <TextView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="DriverSpa"
            android:textColor="@color/White"
            android:textSize="@dimen/text_large"
            android:textStyle="bold" />
    </FrameLayout>
    
</RelativeLayout>