<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="DriverSpa"
            android:textColor="@color/White"
            android:textSize="@dimen/text_large"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/create_password"
            android:textColor="@color/White"
            android:textSize="@dimen/text_medium" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_weight="1.5"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:background="@color/BlueTransparent" />

        <com.google.android.material.textfield.TextInputLayout
            app:hintTextAppearance="@style/TextInputHint.BlueLight"
            app:hintTextColor="@color/BlueLight"
            android:textColorHint="@color/BlueLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin_half">

            <EditText
                android:id="@+id/password"
                style="@style/EditText.Transparent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textColor="@color/White"
                android:textColorHint="@color/BlueLight"
                android:textIsSelectable="false"
                android:textSize="@dimen/text_medium">

                <requestFocus />
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:background="@color/BlueTransparent" />

        <com.google.android.material.textfield.TextInputLayout
            app:hintTextAppearance="@style/TextInputHint.BlueLight"
            app:hintTextColor="@color/BlueLight"
            android:textColorHint="@color/BlueLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin_half">

            <EditText
                android:id="@+id/password_confirm"
                style="@style/EditText.Transparent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/White"
                android:textColorHint="@color/BlueLight"
                android:textIsSelectable="false"
                android:textSize="@dimen/text_medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:background="@color/BlueTransparent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin_half"
            android:paddingLeft="@dimen/horizontal_margin_half"
            android:text="@string/password_rule"
            android:textColor="@color/BlueLight"
            android:textSize="@dimen/text_small" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:background="@drawable/bg_btn_save"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/save"
            android:textAllCaps="true"
            android:textColor="@color/LightBlue"
            android:textSize="@dimen/text_medium"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
